# VRender

./: .gitignore  .gitmodules  CMakeLists.txt  generate.bat
res/models/: pistol.fbx
res/shaders/: compile.bat  frag.spv  shader.frag  shader.vert  vert.spv
res/shaders/compute/: compile.bat  cube_sample.glsl  generate_cubemap.comp  generate_cubemap.spv  generate_im.comp  generate_im.spv  generate_pm.comp  generate_pm.spv
res/shaders/offscreen/: compile.bat  hdr.frag  hdr.vert  hdr_frag.spv  hdr_vert.spv
res/shaders/other/: compile.bat  hdr_map.frag  hdr_map.vert  hdr_map_frag.spv  hdr_map_vert.spv
res/shaders/pbr/: compile.bat  pbr.frag  pbr.spv  pbr.vert  pbr_frag.spv  pbr_vert.spv
res/shaders/test/: frag.spv  shader.frag  shader.vert  vert.spv
src/: api.h  main.cpp  vrender.h
src/debug/: debug.h  logger.cpp  logger.h
src/engine/: engine.cpp  engine.h
src/graphics/: buffer.cpp  buffer.h  camera.cpp  camera.h  descriptor.cpp  descriptor.h  light.h  shader.cpp  shader.h  texture.cpp  texture.h  ubo.cpp  ubo.h
src/input/: input_map.h
src/managers/: asset_manager.cpp  asset_manager.h  input_manager.cpp  input_manager.h  procedulars_manager.cpp  procedulars_manager.h  render_manager.cpp  render_manager.h  scene_manager.cpp  scene_manager.h
src/rendering/: camera.cpp  camera.h  light.h  material.h  mesh.h  renderable.h  scene_objects.h
src/scene/: scene_hi.h
src/utils/: timer.h
src/vulkan/: buffer.cpp  buffer.h  compute_shader.cpp  compute_shader.h  descriptor.h  helpers.cpp  helpers.h  image.cpp  image.h  pool.cpp  pool.h  shader.cpp  shader.h  texture.cpp  texture.h  ubo.cpp  ubo.h  vulkan_app.cpp  vulkan_app.h
